@@ -1,5 +1,5 @@
 # abassurance-bigdata
-Récupération de données suite fusion ABAssurance et AssurPlus, création de plateforme data via : Talend + Kafka + Hadoop + Spark + Python/IA
+Récupération de données suite fusion ABAssurance et AssurePlus, création de plateforme data via : Talend + Kafka + Hadoop + Spark + Python/IA
 
 
 ## Convention de nommage des branches
@@ -50,7 +50,7 @@ La version de python 3.14 est supporté par PySpark 4.2.0 et donc Apache Spark.
 
 Installation de la version 4.2.0 de pySpark : ````pip install pyspark==4.2.0````
 
-### Installation & exécution de pyspark 
+### Installation & exécution de pyspark (Etape de validation initiale)
 Test de pySpark dans un container Docker afin de vérifier son installation et son exécution.
 
 #### Prérequis
@@ -72,7 +72,7 @@ pip install -r requirements.txt
 python essaie-pyspark.py
 ```
 
-### Les modèles conceptuels de données (MCD) de AssurPlus et AbAssurance
+### Les modèles conceptuels de données (MCD) de AssurePlus et AbAssurance
 
 #### AbAssurance 
 ![MCD.png](MCDs/MCD%20AbAssurance/MCD.png)
@@ -86,18 +86,18 @@ Le champ ab_policy_number constitue la clé primaire de la table. C'était déj�
 Les champs ab_type_assurance, ab_date_debut, ab_date_fin, ab_prime_annuelle, ab_statut_contrat et ab_agence_id étaient déjà de simples attributs de l'entité AB_CONTRAT.
 Le champ ab_client_id est une clé étrangère. Il a migré par l'association de dépendance fonctionnelle SOUSCRIRE à partir de l'entité AB_CLIENT en perdant son caractère identifiant.
 
->AB_PAIEMENT ( ab_payment_id, ab_date_paiement, ab_montant, ab_mode_paiement, ab_policy_number 1, #ab_policy_number 2 )
+>AB_PAIEMENT ( ab_payment_id, ab_date_paiement, ab_montant, ab_mode_paiement, #ab_policy_number  )
 Le champ ab_payment_id constitue la clé primaire de la table. C'était déjà un identifiant de l'entité AB_PAIEMENT.
-Les champs ab_date_paiement, ab_montant, ab_mode_paiement et ab_policy_number 1 étaient déjà de simples attributs de l'entité AB_PAIEMENT.
-Le champ ab_policy_number 2 est une clé étrangère. Il a migré par l'association de dépendance fonctionnelle REGLER à partir de l'entité AB_CONTRAT en perdant son caractère identifiant.
+Les champs ab_date_paiement, ab_montant, ab_mode_paiement étaient déjà de simples attributs de l'entité AB_PAIEMENT.
+Le champ ab_policy_number  est une clé étrangère. Il a migré par l'association de dépendance fonctionnelle REGLER à partir de l'entité AB_CONTRAT en perdant son caractère identifiant.
 
->AB_SINISTRE ( ab_claim_id, ab_date_sinistre, ab_montant_estime, ab_statut_sinistre, ab_description, ab_policy_number 1, #ab_policy_number 2 )
+>AB_SINISTRE ( ab_claim_id, ab_date_sinistre, ab_montant_estime, ab_statut_sinistre, ab_description,  #ab_policy_number )
 Le champ ab_claim_id constitue la clé primaire de la table. C'était déjà un identifiant de l'entité AB_SINISTRE.
-Les champs ab_date_sinistre, ab_montant_estime, ab_statut_sinistre, ab_description et ab_policy_number 1 étaient déjà de simples attributs de l'entité AB_SINISTRE.
-Le champ ab_policy_number 2 est une clé étrangère. Il a migré par l'association de dépendance fonctionnelle DECLARER à partir de l'entité AB_CONTRAT en perdant son caractère identifiant.
+Les champs ab_date_sinistre, ab_montant_estime, ab_statut_sinistre, ab_description étaient déjà de simples attributs de l'entité AB_SINISTRE.
+Le champ ab_policy_number  est une clé étrangère. Il a migré par l'association de dépendance fonctionnelle DECLARER à partir de l'entité AB_CONTRAT en perdant son caractère identifiant.
 
-#### AssurPlus
-![MCD.png](MCDs/MCD%20AssurPlus/MCD.png)
+#### AssurePlus
+![MCD.png](MCDs/MCD%20AssurePlus/MCD.png)
 
 >AP_CLAIMS ( AP_SINISTRE_NUM, AP_INCIDENT_DATE, AP_ESTIMATED_AMOUNT, AP_CLAIM_STATUS, AP_CLAIM_COMMENT, AP_FRAUD_SCORE, AP_CONTRACT_REF 1, #AP_CONTRACT_REF 2 )
 Le champ AP_SINISTRE_NUM constitue la clé primaire de la table. C'était déjà un identifiant de l'entité AP_CLAIMS.
@@ -181,7 +181,7 @@ CONTRAT — DECLARER — SINISTRE : relation 1:N. Un contrat peut être associé
 CONTRAT — REGLER — PAIEMENT : relation 1:N. Un contrat peut être associé à plusieurs paiements, tandis qu'un paiement est rattaché à un seul contrat.
 
 
-### Intallation des outils
+### Installation des outils
 
 #### Talend (Talaxie)
 
@@ -298,3 +298,67 @@ To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLeve
 >>> TEST SPARK <-> HADOOP REUSSI
 
 ```
+
+
+### Tableau des versions installées
+
+### Versions installées
+
+| Outil | Version | Mode d'installation |
+|---|---|---|
+| Talaxie (fork Talend Open Studio DI) | V8.9.0-SNAPSHOT | Natif Windows, JDK 21 (JDK système 25 non compatible) |
+| Apache Kafka | à compléter avec `kafka-topics.sh --version` | Docker, image `apache/kafka:latest`, mode KRaft (sans Zookeeper) |
+| Apache Hadoop | 3.2.1 | Docker, images `bde2020/hadoop-namenode:2.0.0-hadoop3.2.1-java8` et `bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8` |
+| Apache Spark (PySpark) | 4.2.0 | Docker, image de base `python:3.12-slim` + OpenJDK 21 |
+| Python (environnement de dev local) | 3.14.5 | venv natif Windows |
+| Python (conteneur applicatif) | 3.12 | Docker, choisi pour sa compatibilité éprouvée avec PySpark en environnement Linux conteneurisé |
+
+### Problèmes rencontrés & résolutions
+
+
+Cette section documente les principaux incidents rencontrés lors de la mise en place de l'environnement, la démarche de diagnostic suivie, et la correction apportée — dans une logique d'amélioration continue.
+
+#### 1. Talaxie : caractères accentués dans le chemin d'installation
+
+**Symptôme** : erreur au démarrage `Cannot read the array length because "jetFiles" is null`.
+
+**Diagnostic** : le moteur Eclipse/Equinox sur lequel repose Talaxie ne supporte pas les caractères accentués dans le chemin d'installation lors de l'énumération de ses plugins internes.
+
+**Cause identifiée** : le dossier d'installation contenait un accent (`E:\Important Aurélie\...`).
+
+**Correction** : déplacement de l'installation vers un chemin sans accent ni espace (`C:\Talaxie\`).
+
+#### 2. Talaxie : incompatibilité avec le JDK système (Java 25)
+
+**Symptôme** : `Exception in thread "org.talend.sdk.component.studio.ProcessManager-server"` puis `InaccessibleObjectException: Unable to make java.lang.invoke.MethodHandles$Lookup(...) accessible`.
+
+**Diagnostic** : le "Component Server" interne de Talaxie utilise la réflexion Java pour charger dynamiquement ses composants. Le système de modules strict introduit par les versions récentes de Java (25) bloque ces accès par défaut.
+
+**Correction** : 
+- Installation d'un JDK 21 (Eclipse Temurin) dédié, sans modifier le JDK système.
+- Configuration du fichier `.ini` de Talaxie pour forcer l'utilisation de ce JDK 21 via l'option `-vm`.
+- Ajout d'options `--add-opens` (`java.lang`, `java.lang.invoke`, `java.util`, `java.io`, `java.net`, `sun.nio.ch`) dans les `-vmargs` du fichier `.ini`, pour autoriser explicitement les accès par réflexion nécessaires au moteur de génération de code (JET).
+
+#### 3. Talaxie : build Maven en mode hors-ligne
+
+**Symptôme** : `Cannot access central (https://repo1.maven.org/maven2/) in offline mode`, lors de l'exécution d'un job.
+
+**Diagnostic** : Talaxie utilise Maven en interne pour compiler chaque job en code Java exécutable. Le mode "Work offline" de Maven, activé par défaut, empêchait le téléchargement du plugin `maven-jar-plugin` nécessaire à la compilation.
+
+**Correction** : désactivation du mode hors-ligne dans **Window → Preferences → Maven → décocher "Work offline"**.
+
+#### 4. Hadoop : namenode et datanode ne démarrent pas dans Docker
+
+**Symptôme** : `Invalid URI for NameNode address (check fs.defaultFS): file:/// has no authority`, puis le datanode échoue avec `No services to connect, missing NameNode address`.
+
+**Diagnostic** : l'image Docker officielle `apache/hadoop:3` démarre avec une configuration minimale par défaut (`fs.defaultFS=file:///`), sans configuration réseau HDFS. Le namenode refuse donc de démarrer, et le datanode n'a personne à qui se connecter.
+
+**Correction** : remplacement par les images `bde2020/hadoop-namenode` et `bde2020/hadoop-datanode`, qui acceptent une configuration simplifiée par variables d'environnement (`CORE_CONF_fs_defaultFS=hdfs://namenode:9000`), sans avoir à écrire manuellement les fichiers XML de configuration Hadoop.
+
+#### 5. Docker : fichier introuvable dans le conteneur après ajout
+
+**Symptôme** : `python: can't open file '/app/test_hadoop_spark.py': [Errno 2] No such file or directory`, alors que le fichier existait bien sur le poste.
+
+**Diagnostic** : l'image Docker n'est pas synchronisée en continu avec le système de fichiers local — elle capture un instantané des fichiers uniquement au moment du `docker build` (instruction `COPY . .`). Le fichier avait été ajouté après le dernier build.
+
+**Correction** : rebuild explicite de l'image (`docker compose build app`) après chaque ajout de fichier nécessaire à l'exécution.
